fix: fix upper margin on small resolutions

--- a/src/ToDoList.scss
+++ b/src/ToDoList.scss
@@ -133,6 +133,7 @@
 @media (max-width: 768px) {
   .todo__content {
     max-width: 90%;
+    padding-top: 20px;
   }
 
   .todo__title {
